<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Start_layout"
    android:id="@+id/start"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/start">

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_marginTop="-12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/vectorr" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="2dp"
        android:src="@drawable/rectangle2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:src="@drawable/boygirl" />

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="-4dp"
        android:background="@drawable/ellipse_1" />
    <View
        android:id="@+id/ellipse_5"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="267dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"
        android:background="@drawable/ellipse_5"
        />
    <View
        android:id="@+id/ellipse_3"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="363dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"
        android:background="@drawable/ellipse_3"
        />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="84dp"
        android:layout_height="81dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="13dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="63dp"
        android:background="@drawable/ellipse_2"
        />
    <View
        android:id="@+id/ellipse_4"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="309dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-73dp"
        android:background="@drawable/ellipse_4"
        />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="434dp"
        android:fontFamily="@font/interbold700"
        android:gravity="top"
        android:text="@string/welcome_to"
        android:textAppearance="@style/welcome_to" />

    <TextView
        android:id="@+id/quiz_app"
        android:layout_width="200dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="466dp"
        android:fontFamily="@font/interbold700"
        android:gravity="top"
        android:text="@string/quiz_app"
        android:textAppearance="@style/quiz_app" />

    <TextView
        android:id="@+id/answer_the_"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="55dp"
        android:fontFamily="@font/baloo_bhai"
        android:layout_marginTop="532dp"
        android:gravity="top"
        android:text="@string/answer_the_"
        android:textAppearance="@style/answer_the_" />

    <ImageView
        android:id="@+id/rectangle_1"
        android:layout_width="227dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="591dp"
        android:background="@drawable/rectangle1" />

    <TextView
        android:id="@+id/get_started"
        android:layout_width="156dp"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="121dp"
        android:layout_marginTop="606dp"
        android:fontFamily="@font/interbold700"
        android:gravity="center_horizontal|top"
        android:text="@string/get_started"
        android:textAppearance="@style/get_started" />

    <View
        android:id="@+id/mo_star"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:background="@drawable/mo_start"
        android:translationZ="3dp"
        android:visibility="invisible" />

    <View
        android:id="@+id/help"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/question"
        android:translationZ="4dp" />

    <View
        android:id="@+id/message"
        android:layout_width="353dp"
        android:layout_height="644dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/message"
        android:translationZ="5dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="353dp"
        android:layout_height="600dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="115dp"
        android:fontFamily="@font/baloo_bhai"
        android:padding="10dp"
        android:text="@string/messageText"
        android:textColor="@color/black"
        android:textSize="28dp"
        android:translationZ="5dp"
        android:visibility="invisible" />

</RelativeLayout>