<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Set_pass_layout"
    android:id="@+id/set_pass"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/set_pass">
    <View
        android:id="@+id/ellipse_4"
        android:layout_width="157dp"
        android:layout_height="157dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="-26dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="612dp"
        android:background="@drawable/ellipse_4"
        />
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="57dp"
        android:layout_height="55dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="53dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="344dp"
        android:background="@drawable/ellipse_1"
        />
    <View
        android:id="@+id/ellipse_6"
        android:layout_width="84dp"
        android:layout_height="81dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="297dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="402dp"
        android:background="@drawable/ellipse_6"
        />
    <View
        android:id="@+id/ellipse_7"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="204dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="553dp"
        android:background="@drawable/ellipse_7"
        />
    <View
        android:id="@+id/ellipse_6_"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="366dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="551dp"
        android:background="@drawable/ellipse_6"
        />
    <View
        android:id="@+id/ellipse_6_1"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="116dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="483dp"
        android:background="@drawable/ellipse_6"
        />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="447dp"
        android:background="@drawable/rectangle_3" />
    <View
        android:id="@+id/rectangle_5"
        android:layout_width="335dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="526dp"
        android:background="@drawable/rectangle_3"
        />
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="213dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="113dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="597dp"
        android:background="@drawable/rectangle1"
        />

    <TextView
        android:id="@+id/submit"
        android:layout_width="146dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="607dp"
        android:gravity="center_horizontal|top"
        android:text="@string/submit"
        android:fontFamily="@font/baloo_bhai"
        android:textAppearance="@style/submit" />

    <TextView
        android:id="@+id/set_new_pas"
        android:layout_width="166dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="416dp"
        android:gravity="top"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/set_new_pas"
        android:textAppearance="@style/set_new_pas" />

    <TextView
        android:id="@+id/confirm_pas"
        android:layout_width="167dp"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="496dp"
        android:gravity="top"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/confirm_pas"
        android:textAppearance="@style/confirm_pas" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:src="@drawable/vector3" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="181dp"
        android:layout_height="59dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_2"
        android:elevation="4dp" />

    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="344dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="140dp"
        android:gravity="top"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/enter_your_"
        android:textAppearance="@style/enter_your_" />

    <TextView
        android:id="@+id/set_new_pas1"
        android:layout_width="415dp"
        android:layout_height="87dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="64dp"
        android:gravity="top"
        android:text="@string/set_new_pas1"
        android:textAppearance="@style/set_new_pas1" />
    <View
        android:id="@+id/young_woman"
        android:layout_width="258dp"
        android:layout_height="258dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="203dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="161dp"
        android:background="@drawable/youngg"
        />
</RelativeLayout>